fix overflow issue

--- a/public/css/infinity-box.css
+++ b/public/css/infinity-box.css
@@ -3,7 +3,7 @@ body {
   background-color: rgb(58,59,62);
   padding: 0;
   margin: 0;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
   background-image: url('../img/classroom.jpg');
   background-repeat: no-repeat;
   background-size: contain;
